# luapico

./: .gitignore  CMakeLists.txt  CMakeSettings.json
klib/src/: list.c  string.c
lua/: lauxlib.c  lbaselib.c  linit.c  loadlib.c  lua.c  lvm.c
shell/src/: lua.c
storage/include/storage/: storage.h
storage/src/: array.c  array.h  cfile.c  storage.c
